# exploring-guardrails

./: .env.example  .gitignore  README.md  promptfooconfig.yaml  pyproject.toml
promptfoo/providers/: with_guardrails.py  without_guardrails.py
src/exploring_guardrails/: demo.py  guards.py  openrouter_client.py  validators.py
tests/: test_guardrails_features.py
